fix word-wrap singername

--- a/src/components/SongInformation/style.scss
+++ b/src/components/SongInformation/style.scss
@@ -18,6 +18,7 @@
     .singer-name{
             margin-top: -20px;
             a {
+              overflow-wrap: break-word;
               max-width: 100%;
               color: #575555;
               font-size: 12px;
